# mybot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
docs/: architecture-core.dot  architecture.dot
docs/sessions/: 2026-04-16-mybot-v0.1-development.md  2026-04-16-palace-rollout.md  2026-04-17-mybot-enhancement.md  2026-04-18-palace-verification-and-extraction.md
mybot/: __init__.py  __main__.py  agent.py  config.py  llm.py  utils.py
mybot/evolution/: __init__.py  heartbeat.py  queue.py
mybot/gateway/: __init__.py  cli.py  telegram.py
mybot/memory/: __init__.py  decay.py  engine.py  profile.py  store.py  temporal.py
mybot/palace/: __init__.py  atrium.py  chunker.py  cli.py  config.py  embedder.py  embedder_doubao.py  ids.py  reranker.py  retriever.py  router.py  store.py  tool_palace.py  writer.py
mybot/tools/: __init__.py  base.py  calendar.py  code.py  memory_tool.py  neural_twin.py  ontology.py  palace_client.py  shell.py  web.py
scripts/: compare_neural_twin_value.py  e2e_ontology_month.py  e2e_ontology_query.py  smoke_ontology_tool.py
tests/: test_agent_close.py  test_chat_event.py  test_config_heartbeat.py  test_evolution_queue.py  test_heartbeat.py  test_http_tools.py  test_palace_client.py
tests/palace/: conftest.py  test_agent_integration.py  test_atrium.py  test_atrium_guards.py  test_chunker.py  test_cli.py  test_config.py  test_embedder.py  test_ids.py  test_migration.py  test_no_rust.py  test_palace_facade.py  test_reranker.py  test_retriever.py  test_router.py  test_store.py  (+2 more)
(+11 files in other folders)
