[project]
name = "mybot"
version = "0.1.0"
description = "Personal AI Agent with ontology brain, advanced memory engine, and multi-model support"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "python-telegram-bot>=21.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "duckduckgo-search>=6.0.0",
    "html2text>=2024.2.26",
    "sqlite-vec>=0.1.3",
    "apsw>=3.45",
    "FlagEmbedding>=1.2.0",
    "jieba>=0.42.1",
    "torch>=2.2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mybot = "mybot.__main__:main"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
